export EGL_PLATFORM as x11 in eglonxbackend

required because the early initEGL to detect buffer_age support
can cause usage of the wrong driver in eglGetDisplay()

BUG: 358750
FIXED-IN: 5.6
REVIEW: 126958